--- a/sdf_asp_net/Views/Home/Contact.cshtml
+++ b/sdf_asp_net/Views/Home/Contact.cshtml
@@ -2,11 +2,13 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-
-
-
-<p>Das Projekt wurde umgesetzt im Rahmen des Moduls M21.1 Systems Development and Frameworks WiSe2018/19</p>
   
 <div class="container">
-
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="http://static2.fr.de/storage/image/7/6/1/3/863167_608x342_1oLxjd_Jo9CqV.jpg" alt="Die Gang">
+        <div class="card-body">
+            <h2 class="card-title">Team BossImperium</h2>
+            <p class="card-text">Das Projekt wurde umgesetzt im Rahmen des Moduls M21.1 Systems Development and Frameworks WiSe2018/19</p>
+        </div>
+    </div>
 </div>
