--- a/sdf_asp_net/Views/Shared/_Layout.cshtml
+++ b/sdf_asp_net/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "Home")">Startseite</a>
+                    <a class="nav-link" href="@Url.Action("Index", "Project")">Startseite</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("About", "Home")">Info</a>
