implemented feature to add user when creating a project

--- a/sdf_asp_net/Views/Project/DetailView.cshtml
+++ b/sdf_asp_net/Views/Project/DetailView.cshtml
@@ -53,6 +53,7 @@
                             <li class="list-group-item">Friedrich</li>
                             <li class="list-group-item">Jonas</li>
                             <li class="list-group-item">Kalle</li>
+                            <li>Nutzerliste: @Html.DisplayFor(model => model.Member)</li>
                         </ul>
                     </div>
                 </div>
