--- a/sdf_asp_net/Content/CSS/StyleSheet.css
+++ b/sdf_asp_net/Content/CSS/StyleSheet.css
@@ -10659,3 +10659,7 @@ a.list-group-item-danger.active {
     .modal .close:not(:disabled):not(.disabled):hover, .modal .close:not(:disabled):not(.disabled):focus {
         color: #000;
     }
+
+div.dropdown:hover > ul.dropdown-menu {
+    display: block;
+}
