--- a/sdf_asp_net/Views/Project/Create.cshtml
+++ b/sdf_asp_net/Views/Project/Create.cshtml
@@ -1,43 +1,99 @@
-﻿@model sdf_asp_net.Models.ProjectModel
+﻿@model IEnumerable<string>
 
 @{
     ViewBag.Title = "Projekt erstellen";
 }
 
+
+
 <h2>Projekt erstellen</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h6>Erstellen Sie Ihr neues Projekt</h6>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="erstellen" class="btn btn-success" />
-            </div>
+<div class="form-horizontal">
+    <h6>Erstellen Sie Ihr neues Projekt</h6>
+    <hr />
+    <div class="form-group">
+        <label for="Name">Projektname:</label>
+        <div class="col-md-10">
+            <input type="text" name="name" class="form-control" id="exampleInputEmail1" placeholder="Dein Projektname">
         </div>
     </div>
+
+    <div class="form-group">
+        <label for="Name">Beschreibung:</label>
+        <div class="col-md-10">
+            <input type="text" name="description" class="form-control" id="exampleInputEmail1" placeholder="Deine Beschreibung">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Nutzer Hinzufügen
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    @foreach (string userName in Model)
+                    {
+                        <li class="list-group-item list-group-item-primary">
+                            <input class="form-check-input" type="checkbox" name="box_@userName" value="True">
+                            <label class="form-check-label" for="inlineCheckbox1">@userName</label>
+                        </li>
+                    }
+                </ul>
+            </div>
+
+
+
+        </div>
+    </div>
+
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="erstellen" class="btn btn-success" />
+        </div>
+    </div>
+
+</div>
 }
 
-    <div>
-        @Html.ActionLink("Zurück zu der Projektliste", "Index")
+<div>
+    @Html.ActionLink("Zurück zu der Projektliste", "Index")
+</div>
+
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Benutzer auswählen</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <ul class="list-group list-group-flush">
+                    @foreach (string userName in Model)
+                    {
+                        <div class="form-check form-check-inline">
+                            <li class="list-group-item">@userName</li>
+                            <input class="form-check-input" type="checkbox" name="box_@userName" value="option1">
+                            <label class="form-check-label" for="inlineCheckbox1"></label>
+                        </div>
+                    }
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">
+                    Bestätigen
+                </button>
+            </div>
+        </div>
     </div>
+</div>
+
