--- a/sdf_asp_net/Views/Project/Index.cshtml
+++ b/sdf_asp_net/Views/Project/Index.cshtml
@@ -23,9 +23,9 @@
                     <td>@Model.Rows[i][1]</td>
                     <td>@Model.Rows[i][2]</td>
                     <td>
-                        <a href="@Url.Action("DetailView", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Anzeigen</a>
-                        <a href="@Url.Action("Edit", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Bearbeiten</a>
-                        <a href="@Url.Action("Delete", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-danger" role="button" aria-pressed="true">Löschen</a>
+                        <a href="@Url.Action("DetailView", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Anzeigen</a>
+                        <a href="@Url.Action("Edit", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-success btn-lg" role="button" aria-pressed="true">Bearbeiten</a>
+                        <a href="@Url.Action("Delete", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Löschen</a>
                     </td>
                 </tr>
             }
