--- a/sdf_asp_net/Views/Project/Index.cshtml
+++ b/sdf_asp_net/Views/Project/Index.cshtml
@@ -2,32 +2,39 @@
 @{
     ViewBag.Title = "Projekte";
 }
-<div class="col-md-12">
-    <a href="@Url.Action("Create", "Project")" class="btn btn-primary float-right btn-lg active" role="button" aria-pressed="true">Projekt erstellen</a>
-</div>
-<h2>Projekte</h2>
+        <div class="col-md-12">
+            <a href="@Url.Action("Create", "Project")" class="btn btn-primary float-right btn-lg active" role="button" aria-pressed="true">Projekt erstellen</a>
+        </div>
+        <h2>Projekte</h2>
 
-<hr />
+        <hr />
 
-    <div class="table-responsive">
-        <table class="table table-hover">
-            <tr>
-                <th>Name</th>
-                <th>Beschreibung</th>
-                <th>Funktionen</th>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <tr>
+                    <th>Name</th>
+                    <th>Beschreibung</th>
+                    <th>Projektleiter</th>
+                    <th>Funktionen</th>
 
-            </tr>
-            @for (int i = 0; i < Model.Rows.Count; i++)
-            {
+                </tr>
+                @for (int i = 0; i < Model.Rows.Count; i++)
+                {
                 <tr>
                     <td>@Model.Rows[i][1]</td>
                     <td>@Model.Rows[i][2]</td>
+                    <td>@Model.Rows[i][5]</td>
+
                     <td>
                         <a href="@Url.Action("DetailView", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-primary btn-lg" role="button" aria-pressed="true">Anzeigen</a>
-                        <a href="@Url.Action("Edit", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-success btn-lg" role="button" aria-pressed="true">Bearbeiten</a>
-                        <a href="@Url.Action("Delete", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Löschen</a>
+                        @if (@Model.Rows[i][5].ToString().Contains(@ViewBag.Username))
+                        {
+                            <a href="@Url.Action("Edit", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-success btn-lg" role="button" aria-pressed="true">Bearbeiten</a>
+                            <a href="@Url.Action("Delete", "Project", new { @id=Model.Rows[i][0]})" class="btn btn-danger btn-lg" role="button" aria-pressed="true">Löschen</a>
+                        }
+
                     </td>
                 </tr>
-            }
-        </table>
-    </div>
+                }
+            </table>
+        </div>
