--- a/sdf_asp_net/Views/Project/DetailView.cshtml
+++ b/sdf_asp_net/Views/Project/DetailView.cshtml
@@ -1,88 +1,150 @@
 ﻿@model sdf_asp_net.ViewModels.ProjectViewModel
 
 @{
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewBag.Title = "DetailView";
 }
 <div class="col-md-12">
-    <a href="@Url.Action("", "Project")"><button type="button" class="btn btn-success float-right btn-lg"> Zum Chatroom </button></a>
-    <button type="button" class="btn btn-success float-right btn-lg" data-toggle="modal" data-target="#exampleModal"> Nutzerliste </button>
+    <!-- <a href="@Url.Action("", "Project/Chat")"><button type="button" class="btn btn-success float-right btn-lg"> Zum Chatroom </button></a>
+      <button type="button" class="btn btn-success float-right btn-lg" data-toggle="modal" data-target="#exampleModal"> Nutzerliste </button> -->
 </div>
-<h2>Detailansicht</h2>
+    <h2>Detailansicht</h2>
 
-<div>
-    <h6><b>Dashboard zum Projekt:</b> @Html.DisplayFor(model => model.Name)</h6>
-    <h6><b>@Html.DisplayNameFor(model => model.Description):</b> @Html.DisplayFor(model => model.Description)</h6>
-    <h6><b>Projektleiter:</b> @Html.DisplayFor(model => model.ManagerName)</h6>
-    @{string userName = Model.ManagerName;}
+    <div>
+        <h6><b>Dashboard zum Projekt:</b> @Html.DisplayFor(model => model.Name)</h6>
+        <h6><b>@Html.DisplayNameFor(model => model.Description):</b> @Html.DisplayFor(model => model.Description)</h6>
+        <h6><b>Projektleiter:</b> @Html.DisplayFor(model => model.ManagerName)</h6>
+        <h6><b>Chat-Nick:</b> @Html.DisplayFor(model => model.ManagerName)</h6>
 
-    <hr />
+        @{string userName = Model.ManagerName;}
 
-    <div class="container">
-        <div class="row">
-            <div class="col-9">
-                <h2>Messageboard</h2>
-                <div class="list-group">
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Message 1</h5>
-                            <small>1 days ago</small>
-                        </div>
-                        <small class="mb-1">Cihan hat einen kleinen, uff was ist passiert?</small>
-                    </a>
-                    <br />
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Message 2</h5>
-                            <small>3 days ago</small>
-                        </div>
-                        <small class="mb-1">Kevin W hat Blasen auf den Knien vom blasen auf den Knien</small>
-                    </a>
-                    <br />
-                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">Message 3</h5>
-                            <small>5 days ago</small>
-                        </div>
-                        <small class="mb-1">Pujan hat einen riesen yarro, uff was ist passiert?</small>
-                    </a>
+        <hr />
+
+        <div class="container">
+            <div class="row">
+                <div class="col-9">
+                    <h2>Messageboard</h2>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Message 1</h5>
+                                <small>1 days ago</small>
+                            </div>
+                            <small class="mb-1">Cihan hat einen kleinen, uff was ist passiert?</small>
+                        </a>
+                        <br />
+                        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Message 2</h5>
+                                <small>3 days ago</small>
+                            </div>
+                            <small class="mb-1">Kevin W hat Blasen auf den Knien vom blasen auf den Knien</small>
+                        </a>
+                        <br />
+                        <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h5 class="mb-1">Message 3</h5>
+                                <small>5 days ago</small>
+                            </div>
+                            <small class="mb-1">Pujan hat einen riesen yarro, uff was ist passiert?</small>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
+
+    </div>
+    <p>
+        @if (@ViewBag.IsAuthorized != null && userName != null)
+        {
+            if (userName.ToString().Contains(@ViewBag.IsAuthorized))
+            {
+                @Html.ActionLink("Bearbeiten", "Edit", new { id = Model.Id })
+            }
+        }
+        |  @Html.ActionLink("Zurück zu der Projektliste", "Index")
+    </p>
+
+
+    <hr>
+    <div class="container">
+        <h2>Chat</h2>
+
+        <input type="text" id="message" />
+        <input type="button" id="sendmessage" value="Send" />
+        <input type="hidden" id="displayname" />
+        <ul id="discussion"></ul>
+
+       
+
     </div>
 
-</div>
-<p>
-    @if (@ViewBag.IsAuthorized != null && userName != null)
-    {
-        if (userName.ToString().Contains(@ViewBag.IsAuthorized))
-        {
-            @Html.ActionLink("Bearbeiten", "Edit", new { id = Model.Id })
-        }
-    }
-   |  @Html.ActionLink("Zurück zu der Projektliste", "Index")
-</p>
 
+    <!--  Doppelt gepoppelt
 
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Nutzerliste</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <ul class="list-group">
-                    @foreach (var member in Model.Member)
-                    {
-                        <li class="list-group-item list-group-item-info">@member</li>
-                    }
-                </ul>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Nutzerliste</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <ul class="list-group">
+                            @foreach (var member in Model.Member)
+                            {
+                                <li class="list-group-item list-group-item-info">@member</li>
+                            }
+                        </ul>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+        -->
+
+    @section scripts {
+        <!--Script references. -->
+        <!--The jQuery library is required and is referenced by default in _Layout.cshtml. -->
+        <!--Reference the SignalR library. -->
+        <script src="~/Scripts/jquery.signalR-2.4.0.min.js"></script>
+        <!--Reference the autogenerated SignalR hub script. -->
+        <script src="~/signalr/hubs"></script>
+        <!--SignalR script to update the chat page and send messages.-->
+        <script>
+        $(function () {
+            // Reference the auto-generated proxy for the hub.
+            var chat = $.connection.chatHub;
+            // Create a function that the hub can call back to display messages.
+            chat.client.addNewMessageToPage = function (name, message) {
+                // Add the message to the page.
+                $('#discussion').append('<li><strong>' + htmlEncode('[@DateTime.Now] - [@Html.DisplayFor(model => model.ManagerName)]')
+                    + '</strong>: ' + htmlEncode(message) + '</li>');
+            };
+
+            // Get the user name and store it to prepend to messages.
+            //$('#hello').val(prompt('Enter your name:', ''));
+            // Set initial focus to message input box.
+            // $('#message').focus();
+
+            // Start the connection.
+            $.connection.hub.start().done(function () {
+                $('#sendmessage').click(function () {
+                    // Call the Send method on the hub.
+                    chat.server.send($('#displayname').val(), $('#message').val());
+                    // Clear text box and reset focus for next comment.
+                    $('#message').val('').focus();
+                });
+            });
+        });
+        // This optional function html-encodes messages for display in the page.
+        function htmlEncode(value) {
+            var encodedValue = $('<div />').text(value).html();
+            return encodedValue;
+        }
+        </script>
+    }
