--- a/sdf_asp_net/Views/Project/DetailView.cshtml
+++ b/sdf_asp_net/Views/Project/DetailView.cshtml
@@ -16,31 +16,31 @@
         <hr class="my-4">
         <p>Projektleiter: @Html.DisplayFor(model => model.ManagerName) </p>
 
-        
-            @{Html.RenderAction("_Chat"); }
-        
 
-        </div>
+        @{Html.RenderAction("_Chat"); }
 
 
+    </div>
 
-        @{string userName = Model.ManagerName;}
 
-        <hr />
-        @using (Html.BeginForm("DownloadFile", "Project", FormMethod.Post))
-        {
-            <input type="hidden" id="hfFileId" name="FileId" />
-            <input type="submit" id="btnDownload" value="Download" style="display:none" />
-        }
-        <div class="container">
-            <div class="row">
-                <div class="col-9">
-                    <h2>Messageboard</h2>
-                    <div class="list-group" style="height: 500px; overflow-y: scroll;">
 
+    @{string userName = Model.ManagerName;}
+
+    <hr />
+    @using (Html.BeginForm("DownloadFile", "Project", FormMethod.Post))
+    {
+        <input type="hidden" id="hfFileId" name="FileId" />
+        <input type="submit" id="btnDownload" value="Download" style="display:none" />
+    }
+    <div class="container">
+        <div class="row">
+            <div class="col-9">
+                <div class="list-group" style="height: 700px; overflow-y: scroll; width: 1100px">
+                    <ul>
+                        <h2>Messageboard</h2>
                         @for (int i = 0; i < Model.Messages.Count; i++)
                         {
-                            <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                            <li class="list-group-item list-group-item-action flex-column align-items-start active">
                                 <div class="d-flex w-100 justify-content-between">
                                     <h2 class="mb-1">@Model.Messages[i].Message</h2>
                                     <small>veröffentlicht am: @Model.Messages[i].Date</small>
@@ -50,41 +50,60 @@
                                     <h6 class="mb-1">@Model.Messages[i].FileName</h6>
                                     <small class="mb-1">@Model.Messages[i].FileContentType</small>
                                 </div>
-                            </a>
+                            </li>
                             if (@ViewBag.IsAuthorized != null && userName != null)
                             {
                                 if (userName.ToString().Contains(@ViewBag.IsAuthorized) && @Model.Messages[i].FileName.ToString().Length > 0)
                                 {
-                                    <a href="javascript:;" onclick="DownloadFile(@Model.Messages[i].Id)">Download</a>
+                                    <a href="javascript:;" class="btn btn-success float-right" onclick="DownloadFile(@Model.Messages[i].Id)">Download</a>
+                                }
+                                using (Html.BeginForm("Reply", "Project", FormMethod.Post))
+                                {
+                                    <input type="hidden" name="projectId" class="form-control" value="@Model.Id" aria-label="Message" aria-describedby="button-addon4">
+                                    <input type="hidden" name="messageboardId" class="form-control" value="@Model.Messages[i].Id" aria-label="Message" aria-describedby="button-addon4">
+                                    <div class="input-group-append" id="button-addon4">
+                                        <input type="text" id="messageInput" name="message" class="form-control" placeholder="Deine Antwort" aria-label="Message" aria-describedby="button-addon4">
+                                        <input type="submit" id="btnUpload" value=">" class="btn btn-primary" />
+                                    </div>
                                 }
                             }
+                            if (Model.Messages[i].MessageReplies.Count > 0)
+                            {
+                                <button type="button" class="btn btn-success float-right btn-lg" data-toggle="modal" data-target="#reply@(i)">Diskussion</button>
+                            }
                             <br />
+                            <br />
+
                         }
-                    </div>
+                    </ul>
                 </div>
             </div>
         </div>
+    </div>
 
-        <br />
-        @using (Html.BeginForm("Message", "Project", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    <br />
+    @using (Html.BeginForm("Message", "Project", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        if (@ViewBag.IsAuthorized != null && userName != null)
         {
-            if (@ViewBag.IsAuthorized != null && userName != null)
+            if (userName.ToString().Contains(@ViewBag.IsAuthorized))
             {
-                if (userName.ToString().Contains(@ViewBag.IsAuthorized))
-                {
-                    <div class="input-group">
-                        <input type="text" id="messageInput" name="message" class="form-control" placeholder="Deine Nachricht" aria-label="Message" aria-describedby="button-addon4">
-                        <input type="hidden" name="projectId" class="form-control" value="@Html.DisplayFor(model => model.Id)" aria-label="Message" aria-describedby="button-addon4">
-                        <div class="input-group-append" id="button-addon4">
-                            <input type="file" name="postedFile" class="btn btn-primary" />
-                            <input type="submit" id="btnUpload" value=">" class="btn btn-primary" />
-                        </div>
+                <div class="input-group">
+                    <input type="text" id="messageInput" name="message" class="form-control" placeholder="Deine Nachricht" aria-label="Message" aria-describedby="button-addon4">
+                    <input type="hidden" name="projectId" class="form-control" value="@Html.DisplayFor(model => model.Id)" aria-label="Message" aria-describedby="button-addon4">
+                    <div class="input-group-append" id="button-addon4">
+                        <input type="file" name="postedFile" class="btn btn-primary" />
+                        <input type="submit" id="btnUpload" value=">" class="btn btn-primary" />
                     </div>
-                }
+                </div>
             }
         }
-    </div>
+    }
+</div>
 <br />
+
+
+
 
 <p>
     <a href="@Url.Action("Index", "Project")" class="btn btn-success float-right btn-lg" role="button" aria-pressed="true">Zurück zu der Projektliste</a>
@@ -98,12 +117,44 @@
 </p>
 
 <hr>
+@for (int i = 0; i < Model.Messages.Count; i++)
+{
+    <div class="modal fade" id="reply@(i)" tabindex="-1" role="dialog" aria-labelledby="userListeModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="userListeModalLabel">Nachrichtenverlauf</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <ul class="list-group">
+                        @for (int j = 0; j < Model.Messages[i].MessageReplies.Count; j++)
+                        {
+                        <li>@Model.Messages[i].MessageReplies[j].Author schrieb am @Model.Messages[i].MessageReplies[j].Date.ToString()
+                        : @Model.Messages[i].MessageReplies[j].Message</li>
+                        }
+
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-dismiss="modal">Schließen</button>
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
+
+
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script type="text/javascript">
     function DownloadFile(fileId) {
         $("#hfFileId").val(fileId);
         $("#btnDownload")[0].click();
     };
+
 </script>
 @section scripts {
     <!--Script references. -->
