--- a/sdf_asp_net/Views/Home/Index.cshtml
+++ b/sdf_asp_net/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model sdf_asp_net.ViewModels.ProjectsViewModel
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout2.cshtml";
     ViewBag.Title = "Home Page";
 }
 
