common calendar function
- added calendar function view to homecontroller
- link to projects and chat connection not implemented yet

--- a/sdf_asp_net/Views/Shared/_Layout.cshtml
+++ b/sdf_asp_net/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Contact", "Home")">Kontakt</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="@Url.Action("MyCalendar", "Home")">MyCalendar</a>
+                </li>
                 @Html.Partial("_LoginPartial")
             </ul>
         </div>
